2004-06-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/hotplug/libsane.usermap: Added Mustek BearPaw 2448 Plus
	  and Plustek OpticPro U16B.

2004-06-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/README tools/RenSaneDlls.cmd: Added REXX script to convert
	  backend-DLL-filenames according to 8.3 naming convention
	  necessary for DLLs on OS/2 (from Franz Bakan).

2004-06-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/net.c doc/sane-net.man doc/saned.man frontend/saned.c:
	  Changed service name from "sane" to "sane-port". This is the
	  IANA registered service name for port 6566 (bug #300758).

2004-06-02  Oliver Schirrmeister <oschirr@abm.de>

	* fujitsu.c
	bugfix: It is possible to read duplex color now.

2004-05-31  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Mattias Ellert has CVS write access now.

2004-05-30  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure.in, configure
	Use pkg-config rather than gphoto2-config to get gphoto
	build parameters (bug #300686)

2004-05-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/v4l.c: Used SANE_VALUE_SCAN_MODE_* constants.
	* doc/descriptions-external/viceo.desc: Mention special kernel patch.

2004-05-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/sp15c.c: Fixed the fix of the sanei_thread fix 
	 (from Mattias Ellert).

2004-05-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.hp-ux: Mention trouble with higher optimization levels
	  (from Ulrich Deiters <ukd@xenon.pc.Uni-Koeln.DE>).
	* doc/descriptions/unsupported.desc: Added Dell A920, Microtek
	  1850S and Plustek OpticPro m12. Removed HP,Scanjet 2300 (already
	  in genesys.desc).
	* backend/sp15c.c: Fixed sanei_thread fix (bug #300634, by Mattias
	  Ellert).

2004-05-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-usb.c: Use shared
	  memory for urb counters
